tests/ui/cached_convert_malformed_unquoted.stderr
error: unexpected end of input, expected an expression
 --> tests/ui/cached_convert_malformed_unquoted.rs:5:43
  |
5 | #[cached(key = "u32", convert = { let x = })]
  |                                           ^
